--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent">
 <!--    tools:context=".MainActivity">-->
 
+    <TextView
+        android:id="@+id/t1"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:gravity="center_horizontal"
+        android:text="消息页面"
+        android:textSize="90dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="238dp" />
+
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
@@ -45,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+
                 android:text="朋友圈" />
 
         </LinearLayout>
